--- a/SHD/Original_jupyter_notebooks/TestFeedForwardSNN_SHD.ipynb
+++ b/SHD/Original_jupyter_notebooks/TestFeedForwardSNN_SHD.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "id": "HUETpaTcH3ys"
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "id": "K8S_QW5A4ftU"
    },
@@ -70,11 +70,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Deepti Kumar\\Desktop\\sopcodes\\dataset\\shddataset\\\n"
+      "Downloading data from https://compneuro.net/datasets/shd_train.h5.gz\n",
+      "File shd_train.h5.gz decompressed to:\n",
+      "/tmp\\.data-cache\\hdspikes\\shd_train.h5.gz\n",
+      "Downloading data from https://compneuro.net/datasets/shd_test.h5.gz\n",
+      "File shd_test.h5.gz decompressed to:\n",
+      "/tmp\\.data-cache\\hdspikes\\shd_test.h5.gz\n",
+      "C:\\Users\\Deepti\\Desktop\\DOPcodes\\SHD\\Original_jupyter_notebooks\\dataset\\shddataset\\\n"
      ]
     }
    ],
    "source": [
+    "cache_dir = os.path.expanduser(\"~/data\")\n",
+    "cache_subdir = \"hdspikes\"\n",
+    "get_shd_dataset(cache_dir, cache_subdir)\n",
     "#train_file = h5py.File('/content/drive/MyDrive/dataset/shd_train.h5','r')\n",
     "#test_file = h5py.File('/content/drive/MyDrive/dataset/shd_test.h5','r')\n",
     "\n",
@@ -606,7 +615,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -620,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
