--- a/SHDFinal/FeedForwardSNN/1HiddenLayer/256units/Plots/Plotting.ipynb
+++ b/SHDFinal/FeedForwardSNN/1HiddenLayer/256units/Plots/Plotting.ipynb
@@ -89,15 +89,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -105,8 +96,7 @@
     "plt.xlabel(\"Epochs\")\n",
     "plt.ylabel(\"Loss\")\n",
     "plt.title('FF1Layer256unitsTest1')\n",
-    "plt.show()\n",
-    "plt.savefig('FF1Layer256unitsTest1.png')"
+    "plt.show()\n"
    ]
   },
   {
